<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="20dp"
    tools:context=".BursaryActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Bursaries"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="COMPUTER SCIENCE AND IT"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/Hyperlink"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:text="@string/Hyperlink2"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="45dp"
        android:text="@string/Hyperlink3"
        android:gravity="center_horizontal"/>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="ACCOUNTING"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:text="@string/Hyperlink4"

        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/textView000"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/Hyperlink5"
        android:textSize="18sp"

        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView00"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="EDUCATION"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/textView0000"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="45dp"
        android:text="@string/Hyperlink6"

        android:gravity="center_horizontal"/>


    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="22dp"
        android:background="@color/black"
        android:text="GO BACK"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


</LinearLayout>